prevent privileges from being saved, implement cutting vote_log, fix width of own vote log

--- a/templates/index.html
+++ b/templates/index.html
@@ -160,7 +160,7 @@
             border-color: transparent transparent transparent var(--bg); /* Erstellt ein Dreieck, das nach unten zeigt */
         }
         #votesContainer {
-            max-width: 100%;
+           width: 100%;
         }
         /* Grundlegende Listeneinstellungen (von 'votelist' auf 'vote-list' korrigiert, falls im HTML so verwendet) */
         .votelist {
